fixed alignment in chrome, added link to Ardour website

--- a/css/main.css
+++ b/css/main.css
@@ -115,12 +115,12 @@ img.screenshot
         
         .header > DIV:first-child
         {
-                justify-content: right
+                justify-content: flex-end
         }
 
         .header > DIV:last-child
         {
-                justify-content: left
+                justify-content: flex-start
         }
         
         main
